force-app/main/default/objects/KuniDepartment__c/KuniDepartment__c.object-meta.xml
<CustomObject>
    <label>KuniDepartment</label>
    <nameField>
        <label>KuniDepartment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KuniDepartment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>