force-app/main/default/objects/KuniDepartment__c/fields/DeptId__c.field-meta.xml
<CustomField>
    <fullName>DeptId__c</fullName>
    <displayFormat>D-{YYYY}{MM}{DD}-{000}</displayFormat>
    <externalId>true</externalId>
    <label>DeptId</label>
    <type>AutoNumber</type>
</CustomField>