force-app/main/default/objects/KuniDepartment__c/fields/DeptName__c.field-meta.xml
<CustomField>
    <fullName>DeptName__c</fullName>
    <label>DeptName</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIVIL</fullName>
            </value>
            <value>
                <fullName>CSR</fullName>
            </value>
            <value>
                <fullName>FINANCE</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>MECHANICAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>