force-app/main/default/objects/KuniDepartment__c/fields/LastEmpCreateDate__c.field-meta.xml
<CustomField>
    <fullName>LastEmpCreateDate__c</fullName>
    <label>LastEmpCreateDate</label>
    <summarizedField>KuniEmployee__c.CreatedDate</summarizedField>
    <summaryForeignKey>KuniEmployee__c.KuniDepartment__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>