force-app/main/default/objects/KuniDepartment__c/fields/NoOfEmployees__c.field-meta.xml
<CustomField>
    <fullName>NoOfEmployees__c</fullName>
    <label>NoOfEmployees</label>
    <summaryForeignKey>KuniEmployee__c.KuniDepartment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>