force-app/main/default/objects/KuniDepartment__c/listViews/EmployeeExpenseQ_KuniDepartment.listView-meta.xml
<ListView>
    <fullName>EmployeeExpenseQ_KuniDepartment</fullName>
    <filterScope>Queue</filterScope>
    <label>EmployeeExpenseQ</label>
    <queue>EmployeeExpenseQ</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>